--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ services:
   - docker
 
 before_install:
-  - docker -t aksharma00711/kube-learning build .
+  - docker build -t aksharma00711/kube-learning .
