--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       Environment:
         description: 'Deployment Environment'
         required: true
-        default: 'staging'
+        default: 'development'
         type: choice
         options:
           - staging
