--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,7 @@ jobs:
       - name: Checkout code by tag
         uses: actions/checkout@v2
         with:
-          ref: ${{ github.ref }}
-        if: ${{ startsWith(github.ref, 'refs/tags/') }}      
+          ref: refs/tags/1.0.0
       
       - run: |
           echo "Infra Environment : ${{ github.event.inputs.Environment }}"
