--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout code by tag
         uses: actions/checkout@v2
         with:
-          ref: refs/tags/1.0.0
+           fetch-depth: 0
       
       - run: |
           echo "Infra Environment : ${{ github.event.inputs.Environment }}"
